--- a/gulp-start2/src/assets/scss/layout/_footer.scss
+++ b/gulp-start2/src/assets/scss/layout/_footer.scss
@@ -25,6 +25,77 @@
     align-self: center;
 }
 
+/*information*/
+.footer__information {
+    max-width: 159px;
+    margin: 0 155px 0 295px;
+}
+
+.footer__information-link {
+    font-family: 'Muli-Bold';
+    font-size: 18px;
+    line-height: 1.94;
+    letter-spacing: -0.36px;
+    color: #6d450c;
+}
+
+/*payment*/
+.footer__payment {
+    max-width: 270px;
+    margin-right: 140px;
+}
+
+.footer__payment-img {
+    object-fit: cover;
+    height: 100%;
+
+}
+
+.footer__payment-container {
+    max-width: 275px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 23px;
+}
+
+/*subscribe*/
+.footer__subscribe {
+    width: 495px;
+}
+
+.footer__subscribe-form {
+    position: relative;
+}
+
+.footer__subscribe-form::after {
+    content: "";
+    display: block;
+    background-image: url("./../images/photoshop-img/inpute-letter-icon.png");
+    width: 24px;
+    height: 19px;
+    position: absolute;
+    top: 20px;
+    left: 23px;
+}
+
+.footer__subscribe-input {
+    border-radius: 30px;
+    background-color: #ffffff;
+    max-width: 495px;
+    width: 100%;
+    height: 60px;
+    color: #6d450c;
+    border-style: none;
+    font-family: 'Muli-Bold';
+    font-size: 17px;
+    padding-left: 63px;
+}
+
+.footer__subscribe-input:focus {
+    outline: none;
+}
+
 .footer__copyright {
     background-color: #6c2c1c;
     height: 60px;
@@ -44,6 +115,7 @@
     width: 50px;
     height: 50px;
     border: 0;
+    border-radius: 5px;
     position: fixed;
     bottom: 45px;
     background-color: #f2662f;
